--- a/academic.html
+++ b/academic.html
@@ -294,13 +294,10 @@
         </div>
     </header>
             <ul>
-                <li>
-                    <a href="#" class="active">ACADEMICS</a>
-                    <div class="dropdown">
+                <li class="listing" style="display: flex; flex-direction: column; align-items: center; justify-content: space-between; padding-bottom: 2%;">
                         <a href="programs.html">PROGRAMS</a>
                         <a href="#">SUMMER INTERNSHIP</a>
                         <a href="#">PRACTICE SCHOOL</a>
-                    </div>
                 </li>
             </ul>
 
