--- a/programs.html
+++ b/programs.html
@@ -279,7 +279,7 @@
                 </a>
             </div>
             <div class="header-links">
-                <a href="#">ABOUT US</a>
+                <a href="./index.html/#about">ABOUT US</a>
                 <a href="https://alumni.silicon.ac.in/">ALUMNI</a>
                 <a href="#">BHUBANESWAR CAMPUS</a>
                 <div class="search-bar">
@@ -297,11 +297,6 @@
             <ul>
                 <li>
                     <a href="#" class="active">ACADEMICS</a>
-                    <div class="dropdown">
-                        <a href="programs.html">PROGRAMS</a>
-                        <a href="#">SUMMER INTERNSHIP</a>
-                        <a href="#">PRACTICE SCHOOL</a>
-                    </div>
                 </li>
                 <li><a href="#">ADMISSIONS</a></li>
                 <li><a href="#">PLACEMENTS</a></li>
