feat: collab page diff

--- a/collab.html
+++ b/collab.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Silicon University</title>
-    <style>
+    <title>Collab</title>
+        <style>
         * {
             margin: 0;
             padding: 0;
@@ -281,7 +281,7 @@
 </head>
 
 <body>
-    <header>
+        <header>
         <div class="header-top">
             <div class="logo">
                 <a href="index.html">
@@ -319,30 +319,99 @@
             </ul>
         </nav>
     </header>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 mb-5">
+                <h2><strong>Industry</strong> Collaborations</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-lg-4">
+                <div class="column-card-blk">
+                    <a href="https://www.vlsiexpert.com/" target="_blank">
+                        <img src="vlsi-expert.png" alt="">
+                    </a>
+                    <div class="block-card-detail">
+                        <svg width="349" height="14" viewBox="0 0 349 14" fill="none">
+                            <path d="M349 2.95639e-05L0 14L1.22392e-06 -9.46645e-07L349 2.95639e-05Z" fill="#034694">
+                            </path>
+                        </svg>
+                        <h4 class="s-title-h" style="height: 56px;">VLSI Experts Pvt.Ltd., India</h4>
 
-    <section class="hero">
-        <div class="hero-content">
-            <h1>Building<br>technology for<br>human<br>progress</h1>
-            <p>We are a university advancing science and technology education for students from all walks of life.</p>
-            <button class="admission-btn">ADMISSIONS 2025-26</button>
+                        <p class="s-para-h" style="height: 90px;">VLSI Experts Pvt. Ltd. is an educational group
+                            aiming to bridge the gap between the semiconductor industry and educational institutions
+                            by conducting workshops, seminars, short-term courses, guest lectures and career
+                            counseling. The collaboration will pave the way for VLSI courses for SiliconTech
+                            students to build their expertise and careers in the semiconductor industry.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+                <div class="column-card-blk">
+                    <a href="">
+                        <img src="stm-micro.png" alt="">
+                    </a>
+                    <div class="block-card-detail">
+                        <svg width="349" height="14" viewBox="0 0 349 14" fill="none">
+                            <path d="M349 2.95639e-05L0 14L1.22392e-06 -9.46645e-07L349 2.95639e-05Z" fill="#034694">
+                            </path>
+                        </svg>
+                        <h4 class="s-title-h" style="height: 56px;">STMicroelectronics Pvt.Ltd., India</h4>
+
+                        <p class="s-para-h" style="height: 90px;">ST is a global multinational electronics and
+                            semiconductor chipmaker. The collaboration with ST Micron, India, will give SiliconTech
+                            students the opportunity to work on ST Micron defined projects to design building blocks
+                            for semiconductor chips, commonly called as IPs or Semiconductor Libraries.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+                <div class="column-card-blk">
+                    <a href="">
+                        <img src="stl.png" alt="">
+                    </a>
+
+                    <div class="block-card-detail">
+                        <svg width="349" height="14" viewBox="0 0 349 14" fill="none">
+                            <path d="M349 2.95639e-05L0 14L1.22392e-06 -9.46645e-07L349 2.95639e-05Z" fill="#034694">
+                            </path>
+                        </svg>
+                        <h4 class="s-title-h" style="height: 56px;">Silicon Tech Lab Pvt.Ltd., India</h4>
+
+                        <p class="s-para-h" style="height: 90px;">The Silicon Tech Lab (STL) builds products and
+                            solutions in cloud computing, mobility and data analytics. The collaboration primarily
+                            seeks to incubate Silicon Tech Lab at Silicons’ Business Incubator creating
+                            opportunities for faculty and students to work on new products and technologies in
+                            education, health care and energy utility. They will provide consulting services to
+                            enterprises in manpower cultivation, financing, information provision and operational
+                            management.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+                <div class="column-card-blk">
+                    <a href="">
+                        <img src="sevya.png" alt="">
+                    </a>
+
+                    <div class="block-card-detail">
+                        <svg width="349" height="14" viewBox="0 0 349 14" fill="none">
+                            <path d="M349 2.95639e-05L0 14L1.22392e-06 -9.46645e-07L349 2.95639e-05Z" fill="#034694">
+                            </path>
+                        </svg>
+                        <h4 class="s-title-h" style="height: 56px;">Sevya Multimedia Technologies Pvt.Ltd., India
+                        </h4>
+
+                        <p class="s-para-h" style="height: 90px;">Sevya develops and delivers best-in-class,
+                            scalable and maintainable products and solutions for web, mobile and enterprise
+                            including VLSI and Embedded System Design Services. SiliconTec will mentor and train new
+                            employees for Sevya in the area of CMOS VLSI design and open-source CAD flow
+                            initiatives.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="hero-image">
-            <img src="./college.jpg" alt="Silicon University Building">
-        </div>
-        <div class="carousel-dots">
-            <span class="dot active"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-        </div>
-    </section>
-    <section class="about" id="about">
-        <div class="about-content">
-            <h2>About Us</h2>
-            <p>Silicon University is dedicated to fostering innovation and excellence in education. Our programs are
-                designed to equip students with the skills and knowledge needed to thrive in a rapidly changing world.
-            </p>
-        </div>
-    </section>
+    </div>
 </body>
 
 </html>
