--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
                 <li><a href="#">RESEARCH</a></li>
                 <li><a href="#">ENTREPRENEURSHIP</a></li>
                 <li><a href="#">CAMPUS LIFE</a></li>
+                <li><a href="colab.html">COLLABORATIONS</a></li>
             </ul>
         </nav>
     </header>
